Added First MediatR code and tidied up references

--- a/AcsStatsWeb/Views/Shared/_form_header.cshtml
+++ b/AcsStatsWeb/Views/Shared/_form_header.cshtml
@@ -4,7 +4,7 @@
             @* <option value="t">Men's Tests</option> *@
             @* <option value="o">Men's ODI</option> *@
             @* <option value="itt">Men's International T20</option> *@
-            @* <option value="f">Men's FC</option> *@
+            <option value="f">Men's FC</option>
             @* <option value="a">Men's List A</option> *@
             @* <option value="tt">Men's T20</option> *@
             <option value="wt">Women's Tests</option>
