--- a/AcsStatsWeb/Views/BattingRecords/BattingOverall.cshtml
+++ b/AcsStatsWeb/Views/BattingRecords/BattingOverall.cshtml
@@ -69,6 +69,7 @@ else
         </thead>
         <tbody>
 
+        @{ const int maxLength = 40; }
 
         @foreach (var detail in Model.PlayerRecordDetails)
         {
@@ -83,7 +84,9 @@ else
             }
 
             var name = Model.ShowTeamInList ? $"{detail.Name} ({detail.Team})" : detail.Name;
-
+//            var detailGroundName = detail.Ground.Length < maxLength ? detail.Ground : detail.Ground.Substring(0, 20) + "...";
+            name = name.Length < maxLength ? name : name.Substring(0, 20) + "...";
+            
             <tr>
                 <td class="text-left" nowrap="nowrap">@name</td>
                 <td class="text-right" nowrap="nowrap">@detail.Matches</td>
