--- a/AcsStatsWeb/Views/Shared/_form_header.cshtml
+++ b/AcsStatsWeb/Views/Shared/_form_header.cshtml
@@ -1,7 +1,7 @@
 <div class="row mb-1 mt-2 mt-3 acs-form-row">
     <div class="col-2">
         <select name="matchType" id="matchType">
-            @* <option value="t">Men's Tests</option> *@
+            <option value="t">Men's Tests</option>
             @* <option value="o">Men's ODI</option> *@
             @* <option value="itt">Men's International T20</option> *@
             <option value="f">Men's FC</option>
