--- a/AcsStatsWeb/Views/BowlingRecords/BowlingOverall.cshtml
+++ b/AcsStatsWeb/Views/BowlingRecords/BowlingOverall.cshtml
@@ -73,7 +73,8 @@ else
         </thead>
         <tbody>
 
-
+        @{ const int maxLength = 40; }
+        
         @foreach (var detail in Model.PlayerRecordDetails)
         {
             var sr = "-";
@@ -94,6 +95,7 @@ else
             var bbm = $"{detail.bbmw}/{detail.bbmr}";
 
             var name = Model.ShowTeamInList ? $"{detail.Name} ({detail.Team})" : detail.Name;
+            name = name.Length < maxLength ? name : name.Substring(0, 20) + "...";
 
             <tr>
                 <td class="text-left" nowrap="nowrap">@name</td>
