--- a/AcsStatsWeb/Views/Shared/_Layout.cshtml
+++ b/AcsStatsWeb/Views/Shared/_Layout.cshtml
@@ -4,9 +4,9 @@
     <meta charset="utf-8"/>
     <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
     <title>@ViewData["Title"] - AcsStatsWeb</title>
-    <link rel="stylesheet" href="~/lib/bootstrap/dist/css/bootstrap.min.css"/>
-    <link rel="stylesheet" href="~/lib/fontawesome/css/all.css"/>
-    <link rel="stylesheet" href="~/css/site.css"/>
+    <link rel="stylesheet" href="~/lib/bootstrap/dist/css/bootstrap.min.css" media="screen"/>
+    <link rel="stylesheet" href="~/lib/fontawesome/css/all.css" media="screen"/>
+    <link rel="stylesheet" href="~/css/site.css" media="screen"/>
     
 </head>
 <body>
@@ -42,7 +42,7 @@
 
 <footer class="border-top footer text-muted">
     <div class="container">
-        &copy; 2021 - AcsStatsWeb - <a asp-area="" asp-controller="Home" asp-action="Privacy">Privacy</a>
+        &copy; 2022 - Kevin Jones - <a asp-area="" asp-controller="Home" asp-action="Privacy">Privacy</a>
     </div>
 </footer>
 <script src="~/lib/jquery/dist/jquery.min.js"></script>
