--- a/AcsStatsWeb/wwwroot/css/site.css
+++ b/AcsStatsWeb/wwwroot/css/site.css
@@ -30,6 +30,7 @@ body {
     font-size: 11.5px;
     font-family: Tahoma, Geneva, Arial, "Arial Narrow", Verdana, sans-serif;
     font-weight: 400;
+    background-color: rgb(246, 247, 248);
 }
 
 @media (min-width: 768px) {
@@ -108,4 +109,90 @@ body {
 
 .btn {
     font-size: 11px;
+}
+
+.scorecard-container {
+    display: grid;
+    grid-template-columns: [first] 15rem auto 15rem;
+    column-gap: 1rem;
+}
+
+
+div.scorecard > table > thead {
+    background-color: rgb(246, 247, 248);
+}
+
+div.scorecard > table > tbody > tr {
+    border-bottom: solid 1px lightgray
+}
+
+div.scorecard {
+    margin-top: 1.5rem;
+    background-color: white;
+}
+
+
+div.scorecard > div {
+    padding-top: 1.5rem;
+}
+
+div.scorecard > table {
+    width: 100%;
+}
+
+div.scorecard > h4 {
+    padding: 1rem 0 0.5rem 1rem;
+}
+
+div.scorecard > table > thead > tr > td {
+    padding: 1rem;
+}
+
+div.scorecard > table > tbody > tr > td{
+    padding: 1rem;
+}
+
+td.scoredetail {
+    padding: 0.5rem;
+    text-align: right;
+    width: 8%;
+}
+
+td.batsman, td.howout {
+    width: 25%;
+}
+
+.sidebar {
+    
+}
+
+.scorecard-scores-container > div {
+    display: flex;
+}
+
+.scorecard-scores-container > div > div:nth-of-type(1){
+    flex: 1;
+}
+
+.scorecard-batting-footer > td:nth-of-type(1){
+    font-weight: bold;
+}
+
+.scorecard-batting-footer > td:nth-of-type(2) > span {
+    font-weight: bold;
+}
+
+.scorecard-batting-footer > td:nth-of-type(3){
+    font-weight: bold;
+}
+
+/*Fall-of-wicket*/
+
+div.scorecard-main > div:nth-child(2) > div:nth-child(1) > div,
+div.scorecard-main > div:nth-child(2) > div:nth-child(2) > div,
+div.scorecard-main > div:nth-child(2) > div:nth-child(3) > div,
+div.scorecard-main > div:nth-child(2) > div:nth-child(4) > div{
+    border-top: 1rem solid rgb(246, 247, 248);
+    padding-left: 1rem ;
+    padding-bottom: 1rem;
 }
