Added player search

--- a/AcsStatsWeb/Views/Home/Index.cshtml
+++ b/AcsStatsWeb/Views/Home/Index.cshtml
@@ -7,6 +7,7 @@
     <ul>
         <li style="list-style-type:none;"><a asp-controller="RecordsHome">Records Home</a></li>
         <li style="list-style-type:none;"><a href="scorecard/bydecade/women">Archive</a></li>
-        <li style="list-style-type:none;"><a href="scorecard/search/women">Search For Women's Scorecard</a></li>
+        <li style="list-style-type:none;"><a href="scorecard/search/card/women">Search For Women's Scorecard</a></li>
+        <li style="list-style-type:none;"><a href="scorecard/search/player/women">Search For Female Player</a></li>
     </ul>
 </div>
