--- a/AcsStatsWeb/Views/Scorecard/TournamentList.cshtml
+++ b/AcsStatsWeb/Views/Scorecard/TournamentList.cshtml
@@ -1,22 +1,17 @@
+@{
+    Layout = "_Scorecard_Layout";
+}
 @using System.Text.Encodings.Web
 @model List<string>
 
-<div class="scorecard-container">
-    <div class="sidebar">
-    </div>
-
-    <div class="scorecard-main">
-        <ul>
-            @foreach (var tournament in Model)
-            {
-                <li>
-                    <a href="/scorecard/tournament/@UrlEncoder.Default.Encode(tournament)">@tournament</a>
-                </li>
-            }
-        </ul>
-    </div>
-
-</div>
+<ul>
+    @foreach (var tournament in Model)
+    {
+        <li>
+            <a href="/scorecard/tournament/@UrlEncoder.Default.Encode(tournament)">@tournament</a>
+        </li>
+    }
+</ul>
 
 
 @section Scripts
