--- a/AcsStatsWeb/Views/Scorecard/Index.cshtml
+++ b/AcsStatsWeb/Views/Scorecard/Index.cshtml
@@ -1,40 +1,37 @@
+@{
+    Layout = "_Scorecard_Layout";
+}
 <div class="scorecard-container">
-    <div class="sidebar">
+    <div class="col-2">
+        <select id="matchType">
+            <option value="wt">Women's Tests</option>
+            <option value="wo">Women's ODI</option>
+            <option value="witt">Women's International T20</option>
+            <option value="wf">Women's FC</option>
+            <option value="wa">Women's List A</option>
+            <option value="wtt">Women's T20</option>
+        </select>
     </div>
-
-    <div class="scorecard-main">
-        <div class="col-2">
-            <select id="matchType">
-                <option value="wt">Women's Tests</option>
-                <option value="wo">Women's ODI</option>
-                <option value="witt">Women's International T20</option>
-                <option value="wf">Women's FC</option>
-                <option value="wa">Women's List A</option>
-                <option value="wtt">Women's T20</option>
+    <form asp-action="Get">
+        <div>Team</div>
+        <div>
+            <select id="teamid">
             </select>
         </div>
-        <form asp-action="Get">
-            <div>Team</div>
-            <div>
-                <select id="teamid">
-                </select>
-            </div>
-            <div>Opposition</div>
-            <div>
-                <select id="opponentsid">
-                </select>
-            </div>
-            <div>Dates</div>
-            <div>
-                <select id="datesid">
-                </select>
-            </div>
-            <div>
-                <button id="getcardid">Get Card</button>
-            </div>
-        </form>
-    </div>
-
+        <div>Opposition</div>
+        <div>
+            <select id="opponentsid">
+            </select>
+        </div>
+        <div>Dates</div>
+        <div>
+            <select id="datesid">
+            </select>
+        </div>
+        <div>
+            <button id="getcardid">Get Card</button>
+        </div>
+    </form>
 </div>
 
 @section Scripts
