Updated sorting so that it's done on the server

--- a/AcsStatsAngular/ClientApp/src/app/modules/batting-records/components/series-averages/series-averages.component.html
+++ b/AcsStatsAngular/ClientApp/src/app/modules/batting-records/components/series-averages/series-averages.component.html
@@ -1,4 +1,4 @@
-<h2>Overall Figures</h2>
+<h2>Series Averages</h2>
 
 <h3>{{(battingSummary$ | async)?.team}} v {{(battingSummary$ | async)?.opponents}}
   at {{(battingSummary$ | async)?.ground}}
